--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
+	<meta property="og:title" content="React Developer in Kitchener"/>
+	<meta property="og:image" content="ReactJs, VueJs, AngularJs, MongoDb, Python"/>
+	<meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name="description" content="React developers are software professionals who work with React to build UIs. By association, React for developing fast and efficient website">
+	<meta name="author" content="Prayag Lalani">
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	
@@ -40,14 +35,14 @@
 		
 	<div class="fh5co-loader"></div>
 		
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" alt= "frontend developers" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/IMG_Profile.JPEG);"></div>
+							<div class="profile-thumb" alt= "developer coding with his laptop" style="background: url(images/IMG_Profile.JPEG);"></div>
 							<h1><span>Prayag Lalani</span></h1>
 							<h3><span>React Developer / Fullstack</span></h3>
 						</div>
@@ -270,7 +265,7 @@
 	
 			
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/devSplash.jpg);">
+		<div class="video fh5co-video" alt= "JavaScript developing" style="background-image: url(images/devSplash.jpg);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
